--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "redux-persist": "^6.0.0",
         "typescript": "4.9.4",
         "universal-cookie": "^6.1.1",
+        "uuid": "^10.0.0",
         "yup": "^0.32.11",
         "zod": "^3.23.8"
     },
@@ -54,6 +55,7 @@
         "@types/jsonwebtoken": "^9.0.7",
         "@types/lodash": "^4.14.191",
         "@types/react-redux": "^7.1.32",
+        "@types/uuid": "^10.0.0",
         "autoprefixer": "^10.4.17",
         "postcss": "^8.4.35",
         "prettier": "^2.8.0",
