--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@headlessui/react": "^1.7.8",
         "@hookform/resolvers": "^3.9.0",
         "@mantine/core": "^7.13.2",
+        "@next/font": "^14.2.15",
         "@reduxjs/toolkit": "^1.9.1",
         "@tanstack/react-query": "^5.59.8",
         "@tippyjs/react": "^4.2.6",
