--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-redux": "^8.1.3",
         "react-select": "^5.8.1",
         "redux-persist": "^6.0.0",
+        "sweetalert2": "^11.14.5",
         "typescript": "4.9.4",
         "universal-cookie": "^6.1.1",
         "uuid": "^10.0.0",
