--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "cookies-next": "^4.3.0",
         "eslint": "8.32.0",
         "eslint-config-next": "13.1.2",
+        "exceljs": "^4.4.0",
+        "file-saver": "^2.0.5",
         "i18next": "^22.4.10",
         "jsonwebtoken": "^9.0.2",
         "jwt-decode": "^4.0.0",
@@ -54,6 +56,7 @@
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
         "@tailwindcss/typography": "^0.5.8",
+        "@types/file-saver": "^2.0.7",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/lodash": "^4.14.191",
         "@types/react-redux": "^7.1.32",
